# Circlor2

./: README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: core.dex
app/src/main/assets/circlor/: core.dex  function_table.json
app/src/main/assets/circlor/ui/functions_list/: about.json  effects.json  game.json  movement.json  system.json  test.json  visual.json
app/src/main/assets/circlor2/: supported_versions.json
app/src/main/assets/circlor2/ui/functions_list/: about.json  game.json  movement.json
app/src/main/cpp/: CMakeLists.txt  Circlor.cpp  Circlor.h  Circlor2.cpp  Circlor2.h  HookManager.cpp  HookManager.h  JNI_mc.cpp  exported_symbols.map  global.cpp  global.h  main.cpp  structs.h
app/src/main/cpp/mc/: Actor.cpp  Actor.h  ClientInstance.cpp  ClientInstance.h  GameMode.cpp  GameMode.h  GuiData.cpp  LocalPlayer.cpp  LocalPlayer.h  MinecraftGame.h  Player.cpp  Player.h
app/src/main/cpp/mc/client/: ClientInstance.cpp  ClientInstance.h  Minecraft.cpp  Minecraft.h  MinecraftGame.cpp  MinecraftGame.h  Timer.cpp  Timer.h
app/src/main/cpp/mc/client/gui/: GuiData.cpp  GuiData.h
app/src/main/cpp/mc/entity/actor/: Actor.cpp  Actor.h  ActorDamageSource.cpp  ActorDamageSource.h  Camera.cpp  Camera.h  MobEffectInstance.cpp  MobEffectInstance.h
app/src/main/cpp/mc/gamemode/: GameMode.cpp  GameMode.h  GameType.h
app/src/main/cpp/mc/level/: BlockPos.cpp  BlockPos.h  Level.cpp  Level.h
app/src/main/cpp/mc/math/: AABB.cpp  AABB.h  Vec3.cpp  Vec3.h
app/src/main/java/dev1503/circlor/: Global.java  JNI.java  MinecraftActivityHandler.java
app/src/main/java/dev1503/circlor2/: FakeActivity.java  FunctionHandler.java  Global.java  JNI.java  MainActivity.java  MinecraftActivityHandler.java  PrelaunchActivity.java
app/src/main/java/dev1503/circloralpha/: FakeActivity.java  FunctionHandler.java  MainActivity.java  PrelaunchActivity.java
app/src/main/jniLibs/arm64-v8a/: MainActivity.java
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/drawable-anydpi/: ic_add_a_photo.xml  ic_air_freshener.xml  ic_android.xml  ic_arrow_forward.xml  ic_directions_run.xml  ic_home.xml  ic_info.xml  ic_keyboard_arrow_down.xml  ic_keyboard_arrow_up.xml  ic_sports_esports.xml
app/src/main/res/layout/: activity_main.xml  bottomsheet_position_picker.xml  dialog_position_picker.xml  funclist_widget_action.xml  funclist_widget_collapse.xml  funclist_widget_edit_text.xml  funclist_widget_slider.xml  funclist_widget_text_short.xml  funclist_widget_toggle.xml  layout_circlor_overlay_2.xml  layout_main_home.xml  layout_main_nav_header.xml
app/src/main/res/menu/: main_nav.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  themes.xml
app/src/main/res/values-en/: strings.xml
gradle/: libs.versions.toml
(+26 files in other folders)
